--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--=== Favicon ===-->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <title>Test surprise</title>
+    <title>SharePark</title>
 
     <!--=== Bootstrap CSS ===-->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -139,7 +139,7 @@
                         <div class="display-table">
                             <div class="display-table-cell">
                                 <div class="slider-right-text">
-                                    <h1>Trouvez un parking !</h1>
+                                    <h1>Trouvez un parking</h1>
                                     <p>Avec SharePark, ne perdez plus votre temps à<br>chercher une place pour vous garer </p>
                                 </div>
                             </div>
