--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                             <h2>À propos de nous</h2>
                             <div class="widget-body">
                                 <img src="assets/img/logo.png" alt="JSOFT">
-                                <p>Lorem ipsum dolored is a sit ameted consectetur adipisicing elit. Nobis magni assumenda distinctio debitis, eum fuga fugiat error reiciendis.</p>
+                                <p>Présent dans 82 pays du monde, SHAREPARK vous propose des parking disponible à toute heure de la journée.</p>
 
                                 <div class="newsletter-area">
                                     <form action="index.html">
