--- a/index.html
+++ b/index.html
@@ -970,12 +970,12 @@
                         <div class="single-footer-widget">
                             <h2>Contactez-nous</h2>
                             <div class="widget-body">
-                                <p>Lorem ipsum doloer sited amet, consectetur adipisicing elit. nibh auguea, scelerisque sed</p>
+                                <p>N'hésitez pas à contacter nos bureaux pour vous renseigner sur les différents services</p>
 
                                 <ul class="get-touch">
-                                    <li><i class="fa fa-map-marker"></i> 800/8, Kazipara, Dhaka</li>
-                                    <li><i class="fa fa-mobile"></i> +880 01 86 25 72 43</li>
-                                    <li><i class="fa fa-envelope"></i> kazukamdu83@gmail.com</li>
+                                    <li><i class="fa fa-map-marker"></i> 31 quai sur seine, 75019 Paris</li>
+                                    <li><i class="fa fa-mobile"></i> +33 1 77 56 55 98</li>
+                                    <li><i class="fa fa-envelope"></i> elvispaouan@sharepark.com</li>
                                 </ul>
                                 <a href="https://goo.gl/maps/b5mt45MCaPB2" class="map-show" target="_blank">Montrer la localisation</a>
                             </div>
