--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
 
                                 <div class="newsletter-area">
                                     <form action="index.html">
-                                        <input type="email" placeholder="Subscribe Our Newsletter">
+                                        <input type="email" placeholder="Souscrivez à notre newsletter">
                                         <button type="submit" class="newsletter-btn"><i class="fa fa-send"></i></button>
                                     </form>
                                 </div>
@@ -937,25 +937,25 @@
                                 <ul class="recent-post">
                                     <li>
                                         <a href="#">
-                                           Hello Bangladesh! 
+                                           Hello Paris! 
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                          Lorem ipsum dolor sit amet
+                                          Le parking innovant
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                           Hello Bangladesh! 
+                                           Le e-parking! 
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            consectetur adipisicing elit?
+                                            Parking à porter de main à tout moment
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
