--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 
                                 <!--== Car Choose ==-->
                                 <div class="choose-car-type book-item">
-                                    <h4>Type de véhicule</h4>
+                                    <h4>Type de place</h4>
                                     <select class="custom-select">
                                       <option selected>Choisir</option>
-                                      <option value="1">Berline</option>
-                                      <option value="2">Break</option>
-                                      <option value="3">Cabriolet</option>
-                                      <option value="4">Citadine</option>
+                                      <option value="1">couvert</option>
+                                      <option value="2">sous-terrain</option>
+                                      <option value="3">Box</option>
+                                      <option value="4">Aérien</option>
                                       <option value="5">Coupé</option>
                                       <option value="6">Monospace</option>
                                       <option value="7">SUV/4x4</option>
@@ -159,10 +159,10 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>About us</h2>
+                        <h2>A propos de nous</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    </div>
+                        <p>Sharepark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parking dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings SharePark ne cesse de grandir. Parce que nous sommes les leaders de la location de parking, nous ouvrons un nouveau parking chaque jour !
+Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! 
                 </div>
                 <!-- Section Title End -->
             </div>
@@ -173,12 +173,10 @@
                     <div class="display-table">
                         <div class="display-table-cell">
                             <div class="about-content">
-                                <p>Lorem simply dummy is a texted of the printing costed and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
-
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aliquid debitis optio praesentium, voluptate repellat accusantium deserunt eius.</p>
+                                
                                 <div class="about-btn">
-                                    <a href="#">Book a Car</a>
-                                    <a href="#">Contact Us</a>
+                                    <a href="#">Réservez une place</a>
+                                    <a href="#">Contactez-nous</a>
                                 </div>
                             </div>
                         </div>
@@ -197,9 +195,9 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>Our Services</h2>
+                        <h2>Nos services</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elitLorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <!-- Section Title End -->
@@ -691,7 +689,7 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>Testimonials</h2>
+                        <h2>Témoignages</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
                         <p>Lorem ipsum dolor sit amet elit.</p>
                     </div>
