--- a/index.html
+++ b/index.html
@@ -612,9 +612,9 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>Only quality for clients</h2>
+                        <h2>TARIFICATION DES PLACES DE PARKING</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Des prix en fonction des lieux et dégrésifs sur le temps</p>
                     </div>
                 </div>
                 <!-- Section Title End -->
@@ -625,17 +625,16 @@
                 <!-- Single Pricing Table -->
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="single-pricing-table">
-                        <h3>BUSINESS</h3>
-                        <h2>$ 55.99</h2>
-                        <h5>PER MONTH</h5>
+                        <h3>TARIF HORAIRE</h3>
+                        <h5>À PARTIR DE 2€40</h5>
 
                         <ul class="package-list">
-                            <li>FREE VEHICLE DELIVERY</li>
-                            <li>WEDDINGS CELEBRATIONS</li>
-                            <li>FULL INSURANCE INCLUDED</li>
-                            <li>TRANSPORT ABROAD</li>
-                            <li>ALL INCLUSIVE MINI BAR</li>
-                            <li>CHAUFFER INCLUDED IN PRICE</li>
+                            <li>PARKING CHAMP ÉLYSÉE - 4,99€</li>
+                            <li>PARKING CHATELET - 3,99€</li>
+                            <li>PARKING BARBÈS - 2,40€</li>
+                            <li>HAUSSMAN SAINT LAZARE - 3,60€</li>
+                            <li>GARE DU NORD - 2,99€</li>
+                            <li>BASTILLE - 3,50€</li>
                         </ul>
                     </div>
                 </div>
@@ -644,17 +643,16 @@
                 <!-- Single Pricing Table -->
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="single-pricing-table">
-                        <h3>Trial</h3>
-                        <h2>Free</h2>
-                        <h5>PER MONTH</h5>
+                        <h3>TARIF JOURNALIER</h3>
+                        <h5>À PARTIR DE 20,90€</h5>
 
                         <ul class="package-list">
-                            <li>FREE VEHICLE DELIVERY</li>
-                            <li>OTHER CELEBRATIONS</li>
-                            <li>FULL INSURANCE</li>
-                            <li>TRANSPORT ABROAD</li>
-                            <li>MINI BAR</li>
-                            <li>INCLUDED IN PRICE</li>
+                            <li>PARKING CHAMP ÉLYSÉE - 30,90€</li>
+                            <li>PARKING RIVOLI - 35,99€</li>
+                            <li>PARKING IENA - 36,99€</li>
+                            <li>PARKING MONTPARNASSE - 25,90€</li>
+                            <li>GARE DE LYON 20,90€</li>
+                            <li>SAINT MICHEL - 23,90€</li>
                         </ul>
                     </div>
                 </div>
@@ -663,17 +661,16 @@
                 <!-- Single Pricing Table -->
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="single-pricing-table">
-                        <h3>standard</h3>
-                        <h2>$ 35.99</h2>
-                        <h5>PER MONTH</h5>
+                        <h3>TARIF HEBDOMADAIRE</h3>
+                        <h5>À PARTIR 99,90€</h5>
 
                         <ul class="package-list">
-                            <li>DELIVERY AT AIRPORT</li>
-                            <li>WEDDINGS AND OTHER</li>
-                            <li>FULL INCLUDED</li>
-                            <li>TRANSPORT ABROAD</li>
-                            <li>ALL MINI BAR</li>
-                            <li>CHAUFFER PRICE</li>
+                            <li>PARKING CHAMP ÉLYSÉE - 140,90€</li>
+                            <li>PARKING BARBÈS - 99,90€</li>
+                            <li>PARKING RIVOLI - 110,90€</li>
+                            <li>PARKING SAINT MICHEL - 105,99€</li>
+                            <li>PARKING GARE DE LYON - 115,99€</li>
+                            <li>PARKING IENA - 125,90€</li>
                         </ul>
                     </div>
                 </div>
@@ -932,7 +929,7 @@
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>Posts récents</h2>
+                            <h2>Il parle de nous</h2>
                             <div class="widget-body">
                                 <ul class="recent-post">
                                     <li>
