--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="col-lg-8 d-none d-xl-block">
                         <nav class="mainmenu alignright">
                             <ul>
-                                <li class="active"><a href="#">Localiser un park</a>
+                                <li class="active"><a href="#">Localiser un parking</a>
                                 </li>
                                 <li><a href="about.html">Tous les parkings</a></li>
                                 <li><a href="services.html">Comment ça marche ?</a></li>
