--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                                     </div>
                                     <div class="funfact-content">
                                         <p><span class="counter">550</span>+</p>
-                                        <h4>HAPPY CLIENTS</h4>
+                                        <h4>Clients satisfaits</h4>
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                                     </div>
                                     <div class="funfact-content">
                                         <p><span class="counter">250</span>+</p>
-                                        <h4>CARS IN STOCK</h4>
+                                        <h4>Places disponibles</h4>
                                     </div>
                                 </div>
                             </div>
@@ -242,15 +242,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
 
                             <!-- Single FunFact Start -->
                             <div class="col-lg-4 col-md-6">
-                                <div class="single-funfact">
-                                    <div class="funfact-icon">
-                                        <i class="fa fa-bank"></i>
-                                    </div>
-                                    <div class="funfact-content">
-                                        <p><span class="counter">50</span>+</p>
-                                        <h4>office in cities</h4>
-                                    </div>
-                                </div>
+                                
                             </div>
                             <!-- Single FunFact End -->
                         </div>
@@ -691,7 +683,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                     <div class="section-title  text-center">
                         <h2>Témoignages</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet elit.</p>
+                        <p>Nos abonnés nous aiment.</p>
                     </div>
                 </div>
                 <!-- Section Title End -->
@@ -702,8 +694,8 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                     <div class="testimonial-content">
                         <!--== Single Testimoial Start ==-->
                         <div class="single-testimonial">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis totam obcaecati impedit, at autem repellat vel magni architecto veritatis sed.</p>
-                            <h3>Vongchong Smith</h3>
+                            <p>Parce que le service que j'attendais à totalement été rendus par vos équipes.</p>
+                            <h3>Basma Fadli</h3>
                             <div class="client-logo">
                                 <img src="assets/img/client/client-pic-1.jpg" alt="JSOFT">
                             </div>
@@ -712,8 +704,8 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
 
                         <!--== Single Testimoial Start ==-->
                         <div class="single-testimonial">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis totam obcaecati impedit, at autem repellat vel magni architecto veritatis sed.</p>
-                            <h3>Amader Tuni</h3>
+                            <p>Simplicité, efficacité, rapidité dans l'inscription comme dans l'utilsation. Service promis, service rendu.</p>
+                            <h3>Elvis Paouan</h3>
                             <div class="client-logo">
                                 <img src="assets/img/client/client-pic-3.jpg" alt="JSOFT">
                             </div>
@@ -722,7 +714,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
 
                         <!--== Single Testimoial Start ==-->
                         <div class="single-testimonial">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis totam obcaecati impedit, at autem repellat vel magni architecto veritatis sed.</p>
+                            <p>Fini les tracs je suis sur de trouver une place de parking à chacun de mes déplacements en ville..</p>
                             <h3>Atex Tuntuni Smith</h3>
                             <div class="client-logo">
                                 <img src="assets/img/client/client-pic-2.jpg" alt="JSOFT">
@@ -763,9 +755,9 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>Tips and articles</h2>
+                        <h2>Articles</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                       
                     </div>
                 </div>
                 <!-- Section Title End -->
@@ -913,11 +905,11 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                             <h2>À propos de nous</h2>
                             <div class="widget-body">
                                 <img src="assets/img/logo.png" alt="JSOFT">
-                                <p>Présent dans 82 pays du monde, SHAREPARK vous propose des parking disponible à toute heure de la journée.</p>
+                                <p>Lorem ipsum dolored is a sit ameted consectetur adipisicing elit. Nobis magni assumenda distinctio debitis, eum fuga fugiat error reiciendis.</p>
 
                                 <div class="newsletter-area">
                                     <form action="index.html">
-                                        <input type="email" placeholder="Souscrivez à notre newsletter">
+                                        <input type="email" placeholder="Subscribe Our Newsletter">
                                         <button type="submit" class="newsletter-btn"><i class="fa fa-send"></i></button>
                                     </form>
                                 </div>
@@ -935,25 +927,25 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                                 <ul class="recent-post">
                                     <li>
                                         <a href="#">
-                                           Hello Paris! 
+                                           Hello Bangladesh! 
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                          Le parking innovant
+                                          Lorem ipsum dolor sit amet
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                           Le e-parking! 
+                                           Hello Bangladesh! 
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            Parking à porter de main à tout moment
+                                            consectetur adipisicing elit?
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
@@ -968,12 +960,12 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                         <div class="single-footer-widget">
                             <h2>Contactez-nous</h2>
                             <div class="widget-body">
-                                <p>N'hésitez pas à contacter nos bureaux pour vous renseigner sur les différents services</p>
+                                <p>Lorem ipsum doloer sited amet, consectetur adipisicing elit. nibh auguea, scelerisque sed</p>
 
                                 <ul class="get-touch">
-                                    <li><i class="fa fa-map-marker"></i> 31 quai sur seine, 75019 Paris</li>
-                                    <li><i class="fa fa-mobile"></i> +33 1 77 56 55 98</li>
-                                    <li><i class="fa fa-envelope"></i> elvispaouan@sharepark.com</li>
+                                    <li><i class="fa fa-map-marker"></i> 800/8, Kazipara, Dhaka</li>
+                                    <li><i class="fa fa-mobile"></i> +880 01 86 25 72 43</li>
+                                    <li><i class="fa fa-envelope"></i> kazukamdu83@gmail.com</li>
                                 </ul>
                                 <a href="https://goo.gl/maps/b5mt45MCaPB2" class="map-show" target="_blank">Montrer la localisation</a>
                             </div>
@@ -991,7 +983,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tout droit réservé | Ce template est fait avec <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
