--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="mobile-app-content">
-                        <h2>SAVE 30% WITH THE APP</h2>
-                        <p>Easy &amp; Fast - Book a car in 60 seconds</p>
+                        <h2>Économisez 30% avec l'appli</h2>
+                        <p>Simple &amp; Rapide - Résérvez une voiture en 60 secondes</p>
                         <div class="app-btns">
                             <a href="#"><i class="fa fa-android"></i> Android Store</a>
                             <a href="#"><i class="fa fa-apple"></i> Apple Store</a>
