--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 
     <!--== Mobile App Area Start ==-->
     <div id="mobileapp-video-bg"></div>
-    <section id="mobile-app-area">
+    <section id="https://miro.com/app/board/o9J_kytX-ts=/?moveToWidget=3074457346346175835">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
