--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                         <h5>À PARTIR DE 20,90€</h5>
 
                         <ul class="package-list">
-                            <li>PARKING CHAMP ÉLYSÉE - 30,90€</li>
+                            <li>PARKING CHAMPS ÉLYSÉE - 30,90€</li>
                             <li>PARKING RIVOLI - 35,99€</li>
                             <li>PARKING IENA - 36,99€</li>
                             <li>PARKING MONTPARNASSE - 25,90€</li>
