--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="mobile-app-content">
-                        <h2>SAVE 30% WITH THE APP</h2>
+                        <h2>ÉCONOMISEZ 30% AVEC L'APPLICATION</h2>
                         <p>Easy &amp; Fast - Book a car in 60 seconds</p>
                         <div class="app-btns">
                             <a href="#"><i class="fa fa-android"></i> Android Store</a>
