--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                 <div class="col-lg-6">
                     <div class="mobile-app-content">
                         <h2>ÉCONOMISEZ 30% AVEC L'APPLICATION</h2>
-                        <p>Easy &amp; Fast - Book a car in 60 seconds</p>
+                        <p>Facile &amp; Rapide - Réserve ton parking en 60 secondes</p>
                         <div class="app-btns">
                             <a href="#"><i class="fa fa-android"></i> Android Store</a>
                             <a href="#"><i class="fa fa-apple"></i> Apple Store</a>
@@ -784,7 +784,7 @@
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>Il parle de nous</h2>
+                            <h2>Ils parlent de nous</h2>
                             <div class="widget-body">
                                 <ul class="recent-post">
                                     <li>
