--- a/index2.html
+++ b/index2.html
@@ -40,15 +40,6 @@
 
 <body class="loader-active">
 
-    <!--== Preloader Area Start ==-->
-    <div class="preloader">
-        <div class="preloader-spinner">
-            <div class="loader-content">
-                <img src="assets/img/preloader.gif" alt="JSOFT">
-            </div>
-        </div>
-    </div>
-    <!--== Preloader Area End ==-->
 
     <!--== Header Area Start ==-->
     <header id="header-area" class="fixed-top">
@@ -160,8 +151,8 @@
                     <div class="slideshowcontent">
                         <div class="display-table">
                             <div class="display-table-cell">
-                                <h1>BOOK A CAR TODAY!</h1>
-                                <p>FOR AS LOW AS $10 A DAY PLUS 15% DISCOUNT <br> FOR OUR RETURNING CUSTOMERS</p>
+                                <h1>Trouvez un parking</h1>
+                                <p>Avec SharePark ne perdez plus votre temps à chercher une place pour vous garer <p>
 
                                 <div class="book-ur-car">
                                     <form action="index2.html">
