--- a/index.html
+++ b/index.html
@@ -166,16 +166,19 @@
 
             <div class="row">
                 <!-- About Content Start -->
+             <center></center>   
                 <div class="col-lg-6">
                     <div class="display-table">
                         <div class="display-table-cell">
                             <div class="about-content">
+                                <center>
                                 <p>Lorem simply dummy is a texted of the printing costed and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
 
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aliquid debitis optio praesentium, voluptate repellat accusantium deserunt eius.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi aliquid debitis optio praesentium, voluptate repellat accusantium deserunt eius.</p></center>
                                 <div class="about-btn">
                                     <a href="#">Book a Car</a>
                                     <a href="#">Contact Us</a>
+                                    
                                 </div>
                             </div>
                         </div>
