--- a/index2.html
+++ b/index2.html
@@ -157,34 +157,33 @@
                                 <div class="book-ur-car">
                                     <form action="index2.html">
                                         <div class="pick-location bookinput-item">
-                                            <select class="custom-select">
-                                              <option selected>Pick Location</option>
-                                              <option value="1">Dhaka</option>
-                                              <option value="2">Comilla</option>
-                                              <option value="3">Barishal</option>
-                                              <option value="3">Rangpur</option>
-                                            </select>
+                                             <input type="texte" placeholder= "Adresse">
                                         </div>
 
                                         <div class="pick-date bookinput-item">
-                                            <input id="startDate2" placeholder="Pick Date" />
+                                            <input id="startDate2" placeholder="Date de début" />
                                         </div>
 
                                         <div class="retern-date bookinput-item">
-                                            <input id="endDate2" placeholder="Return Date" />
+                                            <input id="endDate2" placeholder="Date de fin" />
                                         </div>
 
                                         <div class="car-choose bookinput-item">
-                                            <select class="custom-select">
-                                              <option selected>Choose Car</option>
-                                              <option value="1">BMW</option>
-                                              <option value="2">Audi</option>
-                                              <option value="3">Lexus</option>
-                                            </select>
+                                            <select class="custom-select" placeholder="Choisir">
+                                      <option selected>Choisir</option>
+                                      <option value="1">Berline</option>
+                                      <option value="2">Break</option>
+                                      <option value="3">Cabriolet</option>
+                                      <option value="4">Citadine</option>
+                                      <option value="5">Coupé</option>
+                                      <option value="6">Monospace</option>
+                                      <option value="7">SUV/4x4</option>
+                                      <option value="8">Utilitaire</option>
+                                    </select>
                                         </div>
 
                                         <div class="bookcar-btn bookinput-item">
-                                            <button type="submit">Book Car</button>
+                                            <button type="submit">Trouver un parking</button>
                                         </div>
                                     </form>
                                 </div>
