--- a/index.html
+++ b/index.html
@@ -744,8 +744,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="mobile-app-content">
-                        <h2>SAVE 30% WITH THE APP</h2>
-                        <p>Easy &amp; Fast - Book a car in 60 seconds</p>
+                        <h2>ÉCONOMISEZ 30% AVEC L'APPLICATION</h2>
+                        <p>FACILE &amp; RAPIDE - RÉSERVEZ UNE PLACE DE PARKING EN 60 SECONDES</p>
                         <div class="app-btns">
                             <a href="#"><i class="fa fa-android"></i> Android Store</a>
                             <a href="#"><i class="fa fa-apple"></i> Apple Store</a>
@@ -931,7 +931,7 @@
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>Il parle de nous</h2>
+                            <h2>Ils parlent de nous</h2>
                             <div class="widget-body">
                                 <ul class="recent-post">
                                     <li>
