--- a/index2.html
+++ b/index2.html
@@ -151,13 +151,13 @@
                     <div class="slideshowcontent">
                         <div class="display-table">
                             <div class="display-table-cell">
-                                <h1>Trouvez un parking</h1>
+                                <h1>Trouvez un parking facilement</h1>
                                 <p>Avec SharePark ne perdez plus votre temps à chercher une place pour vous garer <p>
 
                                 <div class="book-ur-car">
                                     <form action="index2.html">
                                         <div class="pick-location bookinput-item">
-                                             <input type="texte" placeholder= "Adresse">
+                                             <input type="texte" placeholder= "Adresse"> 
                                         </div>
 
                                         <div class="pick-date bookinput-item">
@@ -203,9 +203,9 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>About us</h2>
+                        <h2>A propos de nous</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        
                     </div>
                 </div>
                 <!-- Section Title End -->
@@ -217,8 +217,7 @@
                     <div class="display-table">
                         <div class="display-table-cell">
                             <div class="about-content">
-                                <p>SharePark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parking dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings Yespark ne cesse de grandir. Parce que nous sommes les leaders de la location de parking, nous ouvrons un nouveau parking chaque jour !
-Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! </p>
+                                <p>SharePark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parking dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings Yespark ne cesse de grandir. Parce que nous sommes les leaders de la location de parking, nous ouvrons un nouveau parking chaque jour ! Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! </p>
                             </div>
                         </div>
                     </div>
@@ -1056,14 +1055,14 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>About Us</h2>
+                            <h2>À propos de nous</h2>
                             <div class="widget-body">
                                 <img src="assets/img/logo.png" alt="JSOFT">
-                                <p>Lorem ipsum dolored is a sit ameted consectetur adipisicing elit. Nobis magni assumenda distinctio debitis, eum fuga fugiat error reiciendis.</p>
+                                <p>Présent dans 82 pays du monde, SHAREPARK vous propose des parking disponible à toute heure de la journée.</p>
 
                                 <div class="newsletter-area">
                                     <form action="index.html">
-                                        <input type="email" placeholder="Subscribe Our Newsletter">
+                                        <input type="email" placeholder="Souscrivez à notre newsletter">
                                         <button type="submit" class="newsletter-btn"><i class="fa fa-send"></i></button>
                                     </form>
                                 </div>
@@ -1076,30 +1075,30 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>Recent Posts</h2>
+                            <h2>Il parle de nous</h2>
                             <div class="widget-body">
                                 <ul class="recent-post">
                                     <li>
                                         <a href="#">
-                                           Hello Bangladesh! 
+                                           Hello Paris! 
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                          Lorem ipsum dolor sit amet
+                                          Le parking innovant
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                           Hello Bangladesh! 
+                                           Le e-parking! 
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
                                     <li>
                                         <a href="#">
-                                            consectetur adipisicing elit?
+                                            Parking à porter de main à tout moment
                                            <i class="fa fa-long-arrow-right"></i>
                                        </a>
                                     </li>
@@ -1112,16 +1111,16 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>get touch</h2>
+                            <h2>Contactez-nous</h2>
                             <div class="widget-body">
-                                <p>Lorem ipsum doloer sited amet, consectetur adipisicing elit. nibh auguea, scelerisque sed</p>
+                                <p>N'hésitez pas à contacter nos bureaux pour vous renseigner sur les différents services</p>
 
                                 <ul class="get-touch">
-                                    <li><i class="fa fa-map-marker"></i> 800/8, Kazipara, Dhaka</li>
-                                    <li><i class="fa fa-mobile"></i> +880 01 86 25 72 43</li>
-                                    <li><i class="fa fa-envelope"></i> kazukamdu83@gmail.com</li>
+                                    <li><i class="fa fa-map-marker"></i> 31 quai sur seine, 75019 Paris</li>
+                                    <li><i class="fa fa-mobile"></i> +33 1 77 56 55 98</li>
+                                    <li><i class="fa fa-envelope"></i> elvispaouan@sharepark.com</li>
                                 </ul>
-                                <a href="https://goo.gl/maps/b5mt45MCaPB2" class="map-show" target="_blank">Show Location</a>
+                                <a href="https://goo.gl/maps/b5mt45MCaPB2" class="map-show" target="_blank">Montrer la localisation</a>
                             </div>
                         </div>
                     </div>
@@ -1137,7 +1136,7 @@ Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus 
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Tout droit réservé | Ce template est fait avec <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                     </div>
                 </div>
