update dscription app

--- a/index2.html
+++ b/index2.html
@@ -846,8 +846,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="mobile-app-content">
-                        <h2>ÉCONOMISEZ 30% AVEC L'APPLICATION</h2>
-                        <p>FACILE &amp; RAPIDE - RÉSERVEZ UNE PLACE DE PARKING EN 60 SECONDES</p>
+                        <h2>Trouvez une place de parking en un clin d'oeil</h2>
+                        <p>Facile &amp; Rapide - Réservez une place de parking en 60 secondes</p>
                         <div class="app-btns">
                             <a href="#"><i class="fa fa-android"></i> Android Store</a>
                             <a href="#"><i class="fa fa-apple"></i> App Store</a>
