bandeau places disponibles

--- a/index2.html
+++ b/index2.html
@@ -180,8 +180,8 @@
                                         <i class="fa fa-smile-o"></i>
                                     </div>
                                     <div class="funfact-content">
-                                        <p><span class="counter">550</span>+</p>
-                                        <h4>HAPPY CLIENTS</h4>
+                                       
+                                        <h4>Pas d'engagement</h4>
                                     </div>
                                 </div>
                             </div>
@@ -194,8 +194,8 @@
                                         <i class="fa fa-car"></i>
                                     </div>
                                     <div class="funfact-content">
-                                        <p><span class="counter">250</span>+</p>
-                                        <h4>CARS IN STOCK</h4>
+                                        <p><span class="counter">35000</span>+</p>
+                                        <h4>places disponibles</h4>
                                     </div>
                                 </div>
                             </div>
@@ -208,8 +208,7 @@
                                         <i class="fa fa-bank"></i>
                                     </div>
                                     <div class="funfact-content">
-                                        <p><span class="counter">50</span>+</p>
-                                        <h4>office in cities</h4>
+                                        <h4>Pas de caution</h4>
                                     </div>
                                 </div>
                             </div>
