--- a/index2.html
+++ b/index2.html
@@ -488,7 +488,7 @@
                             <h2>À propos de nous</h2>
                             <div class="widget-body">
                                 <img src="assets/img/logo.png" alt="JSOFT">
-                                <p>Présent dans 82 pays du monde, SHAREPARK vous propose des parking disponible à toute heure de la journée.</p>
+                                <p>Présent dans toute la France, SharePark vous propose des parkings disponibles à toute heure de la journée</p>
 
                                 <div class="newsletter-area">
                                     <form action="index.html">
@@ -549,12 +549,12 @@
                         <div class="single-footer-widget">
                             <h2>Contactez-nous</h2>
                             <div class="widget-body">
-                                <p>N'hésitez pas à contacter nos bureaux pour vous renseigner sur les différents services</p>
+                                <p>N'hésitez pas à nous contacter pour divers renseignements sur les différents services</p>
 
                                 <ul class="get-touch">
                                     <li><i class="fa fa-map-marker"></i> 31 quai sur seine, 75019 Paris</li>
                                     <li><i class="fa fa-mobile"></i> +33 1 77 56 55 98</li>
-                                    <li><i class="fa fa-envelope"></i> elvispaouan@sharepark.com</li>
+                                    <li><i class="fa fa-envelope"></i> contact@sharepark.com</li>
                                 </ul>
                                 <a href="https://goo.gl/maps/b5mt45MCaPB2" class="map-show" target="_blank">Montrer la localisation</a>
                             </div>
