--- a/index2.html
+++ b/index2.html
@@ -228,9 +228,9 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>Choose your Car</h2>
+                        <h2>Choissez votre place de parking</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Une place de parking, simplement.</p>
                     </div>
                 </div>
                 <!-- Section Title End -->
@@ -244,12 +244,12 @@
                             <div class="col-lg-3">
                                 <!-- Choose Filtering Menu Start -->
                                 <div class="home2-car-filter">
-                                    <a href="#" data-filter="*" class="active">all</a>
-                                    <a href="#" data-filter=".con">Conver</a>
-                                    <a href="#" data-filter=".hat">Truck</a>
-                                    <a href="#" data-filter=".mpv">MPV</a>
-                                    <a href="#" data-filter=".sedan">Sedan</a>
-                                    <a href="#" data-filter=".suv">SUV</a>
+                                    <a href="#" data-filter="*" class="active">Tous</a>
+                                    <a href="#" data-filter=".con">Parking extérieur</a>
+                                    <a href="#" data-filter=".hat">Parking soutérain</a>
+                                    <a href="#" data-filter=".mpv">Parking aérien</a>
+                                    <a href="#" data-filter=".sedan">Aéroports</a>
+                                    <a href="#" data-filter=".suv">Gares</a>
                                 </div>
                                 <!-- Choose Filtering Menu End -->
                             </div>
