--- a/index2.html
+++ b/index2.html
@@ -377,9 +377,9 @@
                         <h5>À PARTIR DE 2€40</h5>
 
                         <ul class="package-list">
-                            <li>PARKING CHAMP ÉLYSÉE - 4,99€</li>
-                            <li>PARKING CHATELET - 3,99€</li>
-                            <li>PARKING BARBÈS - 2,40€</li>
+                            <li>CHAMPS ÉLYSÉES - 4,99€</li>
+                            <li>CHÂTELET - 3,99€</li>
+                            <li>BARBÈS - 2,40€</li>
                             <li>HAUSSMAN SAINT LAZARE - 3,60€</li>
                             <li>GARE DU NORD - 2,99€</li>
                             <li>BASTILLE - 3,50€</li>
@@ -395,10 +395,10 @@
                         <h5>À PARTIR DE 20,90€</h5>
 
                         <ul class="package-list">
-                            <li>PARKING CHAMP ÉLYSÉE - 30,90€</li>
-                            <li>PARKING RIVOLI - 35,99€</li>
-                            <li>PARKING IENA - 36,99€</li>
-                            <li>PARKING MONTPARNASSE - 25,90€</li>
+                            <li>CHAMPS ÉLYSÉES - 30,90€</li>
+                            <li>RIVOLI - 35,99€</li>
+                            <li>IENA - 36,99€</li>
+                            <li>MONTPARNASSE - 25,90€</li>
                             <li>GARE DE LYON 20,90€</li>
                             <li>SAINT MICHEL - 23,90€</li>
                         </ul>
@@ -413,12 +413,12 @@
                         <h5>À PARTIR 99,90€</h5>
 
                         <ul class="package-list">
-                            <li>PARKING CHAMP ÉLYSÉE - 140,90€</li>
-                            <li>PARKING BARBÈS - 99,90€</li>
-                            <li>PARKING RIVOLI - 110,90€</li>
-                            <li>PARKING SAINT MICHEL - 105,99€</li>
-                            <li>PARKING GARE DE LYON - 115,99€</li>
-                            <li>PARKING IENA - 125,90€</li>
+                            <li>CHAMPS ÉLYSÉES - 140,90€</li>
+                            <li>BARBÈS - 99,90€</li>
+                            <li>RIVOLI - 110,90€</li>
+                            <li>SAINT MICHEL - 105,99€</li>
+                            <li>GARE DE LYON - 115,99€</li>
+                            <li>IENA - 125,90€</li>
                         </ul>
                     </div>
                 </div>
