--- a/index2.html
+++ b/index2.html
@@ -134,7 +134,7 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>A propos de nous</h2>
+                        <h2>Mieux nous connaître</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
                         
                     </div>
