--- a/index2.html
+++ b/index2.html
@@ -360,7 +360,7 @@
                 <!-- Section Title Start -->
                 <div class="col-lg-12">
                     <div class="section-title  text-center">
-                        <h2>TARIFICATIONHFKHFHJSDJFK DES PLACES DE PARKING</h2>
+                        <h2>TARIFICATION DES PLACES DE PARKING</h2>
                         <span class="title-line"><i class="fa fa-car"></i></span>
                         <p>Des prix en fonction des lieux et dégrésifs sur le temps</p>
                     </div>
