--- a/index2.html
+++ b/index2.html
@@ -473,7 +473,7 @@
                     <!-- Single Footer Widget Start -->
                     <div class="col-lg-4 col-md-6">
                         <div class="single-footer-widget">
-                            <h2>À propos de nous</h2>
+                            <h2>À propos de nous mamadou</h2>
                             <div class="widget-body">
                                 <img src="assets/img/logo.png" alt="JSOFT">
                                 <p>Présent dans toute la France, SharePark vous propose des parkings disponibles à toute heure de la journée</p>
