--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -452,7 +452,7 @@
           <div class="col-lg-6">
             <div class="mobile-app-content">
               <h2>Trouvez une place de parking en un clin d'oeil</h2>
-              <p>Facile &amp; Rapide - Réservez une place de parking en 60 secondes</p>
+              <p>Facile &amp; Rapide - Réservez une place de parking en quelques secondes</p>
               <div class="app-btns">
                 <a href="#"><i class="fa fa-android"></i> Android Store</a>
                 <a href="#"><i class="fa fa-apple"></i> App Store</a>
