--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -129,8 +129,7 @@
     <!--== SlideshowBg Area End ==-->
 <section>
     <div class="container text-center">
-        <h1 class="my-5">Ns parking</h1>
-    
+        <h1 class="my-5">Nos parking</h1>
     <iframe src="https://www.google.com/maps/d/embed?mid=1eksOqgN-fBh2Pu9OyDxj_4M_jaUgNgPY" width="100%" height="650"></iframe>
     </div>
      
