--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -198,7 +198,7 @@
           <!-- Section Title Start -->
           <div class="col-lg-12">
             <div class="section-title  text-center">
-              <h2>Choissez votre place de parking</h2>
+              <h2>Choisissez votre place de parking</h2>
               <span class="title-line"><i class="fa fa-car"></i></span>
               <p>Une place de parking, simplement.</p>
             </div>
