--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -164,7 +164,7 @@
                       <i class="fa fa-car"></i>
                     </div>
                     <div class="funfact-content">
-                      <p><span class="counter">35000</span>+</p>
+                      <p><span class="counter">35000</span>
                       <h4>places disponibles</h4>
                     </div>
                   </div>
