--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -346,7 +346,7 @@
             <div class="single-pricing-table">
               <h3>TARIF HORAIRE</h3>
                 <br>
-              <h5>À PARTIR DE 2€40</h5>
+              <h5>À PARTIR DE 2,40€</h5>
 
 
 
