--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -426,35 +426,30 @@
                 <p id="application"> Fini les bips de parking perdus, fini les cautions encaissées. Utilisez l’application SharePark, et ouvrez la porte du parking d’un simple effleurement de doigt !</p>
 
                 <div class="col-md-8 col-sm-20 text-left">
-                  <br>
+                <ul style="list-style-type: none">
+                    <li id="application" > Application gratuite</li>     
+                    <li id="application"> Ouverture sécurisée</li>     
+                    <li id="application"> Même sans connexion internet</li>     
+                    <li id="application"> Accessible depuis plusieurs téléphones</li>
+                    </ul>  
 
 
-<ul style="list-style-type: none">
-<li id="application" >✅ Application gratuite</li>     <br>
-<li id="application">✅ Ouverture sécurisée</li>     <br>
-<li id="application">✅ Même sans connexion internet</li>     <br>
-<li id="application">✅ Accessible depuis plusieurs téléphones</li>
-</ul>
+                </div>
+              </div>
+              <br>
 
-</div>
-</div>
+              <div class="y-center-thumbnails">
+                  <a class="lazyload" target="_blank" href="https://itunes.apple.com/fr/" my-20><img src="https://d1asit4zp0a0xr.cloudfront.net/assets/app_store.fr-81886470ffc931c1eda332a14ecdb1c435c3e71626e875f6b545eec295043010.svg"></a>
+                  <a class="lazyload" target="_blank" href="https://play.google.com/store"><img src="https://d1asit4zp0a0xr.cloudfront.net/assets/google_play.fr-870359deff32f81854be6490b5308ce522f4bcb4e768de9b74e66da06bb14ff0.svg"></a>
+              </div>
+            </div>
 
-                  <br>      <br>
 
-<div class="y-center-thumbnails">
-<a class="lazyload" target="_blank" href="https://itunes.apple.com/fr/"><img src="https://d1asit4zp0a0xr.cloudfront.net/assets/app_store.fr-81886470ffc931c1eda332a14ecdb1c435c3e71626e875f6b545eec295043010.svg"></a>
-<a class="lazyload" target="_blank" href="https://play.google.com/store"><img src="https://d1asit4zp0a0xr.cloudfront.net/assets/google_play.fr-870359deff32f81854be6490b5308ce522f4bcb4e768de9b74e66da06bb14ff0.svg"></a>
-</div>
-</div>
-
-<br>
 
 
             </div>
           </div>
-        </div>
-      </div>
-    </section>
+       </section>
     <!--== Mobile App Area End ==-->
 <!--== About Us Area Start ==-->
     <section id="about-area" class="section-padding">
