--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -566,7 +566,7 @@
                   <p>N'hésitez pas à nous contacter pour divers renseignements sur les différents services</p>
 
                   <ul class="get-touch">
-                    <li><i class="fa fa-map-marker"></i> 31 quai sur seine, 75019 Paris</li>
+                    <li><i class="fa fa-map-marker"></i> 31 quai de seine, 75019 Paris</li>
                     <li><i class="fa fa-mobile"></i> +33 1 77 56 55 98</li>
                     <li><i class="fa fa-envelope"></i> contact@sharepark.com</li>
                   </ul>
