--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -471,7 +471,7 @@
             <div class="display-table">
               <div class="display-table-cell">
                 <div class="about-content">
-                  <p>SharePark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parking dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings Yespark ne cesse de grandir. Parce que nous sommes les leaders de la location de parking, nous ouvrons un nouveau parking chaque jour ! Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! </p>
+                  <p>SharePark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parking dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings SharePark ne cesse de grandir. Parce que nous sommes les leaders de la location de parking, nous ouvrons un nouveau parking chaque jour ! Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! </p>
                 </div>
               </div>
             </div>
