--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -139,10 +139,10 @@
 
                 <div class="col-md-8 col-sm-20 text-left">
                 <ul style="list-style-type: none">
-                    <li id="application" > Application gratuite</li>
-                    <li id="application"> Ouverture sécurisée</li>
-                    <li id="application"> Même sans connexion internet</li>
-                    <li id="application"> Accessible depuis plusieurs téléphones</li>
+                    <li id="application" >✅ Application gratuite</li>
+                    <li id="application">✅ Ouverture sécurisée</li>
+                    <li id="application">✅ Même sans connexion internet</li>
+                    <li id="application">✅ Accessible depuis plusieurs téléphones</li>
                     </ul>
 
 
