--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -383,10 +383,10 @@
 
               <ul class="package-list">
 
-                <li>   <a href="#" >CHAMPS ÉLYSÉES- 4,99€</a> </li>
-                <li>  <a href="#">CHÂTELET - 3,99€</a> </li>
-                <li>    <a href="#">BARBÈS- 4,99€</a> </li>
-                <li>    <a href="#">HAUSSMAN SAINT LAZARE- 4,99€</a> </li>
+                <li>   <a href="#" >CHAMPS ÉLYSÉES - 4,99€</a> </li>
+                <li>  <a href="#"> LA DÉFENSE - 3,99€</a> </li>
+                <li>    <a href="#">INVALIDES - 4,99€</a> </li>
+                <li>    <a href="#">MUSÉE D'ORSAY - 4,99€</a> </li>
                 <li>    <a href="#">GARE DU NORD - 2,99€</a> </li>
                 <li>    <a href="#">BASTILLE - 3,50€</a> </li>
 
@@ -405,12 +405,12 @@
               <ul class="package-list">
 
 
-                <li>   <a href="#" >CHAMPS ÉLYSÉES - 30,90€</a> </li>
-                <li>  <a href="#">RIVOLI - 35,99€</a> </li>
-                <li>    <a href="#">IENA - 36,99€</a> </li>
+                <li>   <a href="#" >SAINT-AMBROISE - 30,90€</a> </li>
+                <li>  <a href="#">MARAIS - 35,99€</a> </li>
+                <li>    <a href="#">LA VILETTE - 36,99€</a> </li>
                 <li>    <a href="#">MONTPARNASSE - 25,90€</a> </li>
                 <li>    <a href="#">GARE DE LYON - 25,99€</a> </li>
-                <li>    <a href="#">SAINT MICHEL - 23,90€</a> </li>
+                <li>    <a href="#">RÉPUBLIQUE - 23,90€</a> </li>
 
 
 
@@ -429,12 +429,12 @@
 
 
               <ul class="package-list">
-                <li>   <a href="#" >CHAMPS ÉLYSÉES - 140,90€</a> </li>
-                <li>  <a href="#">BARBÈS - 99,90€</a> </li>
-                <li>    <a href="#">RIVOLI - 110,90€</a> </li>
-                <li>    <a href="#">SAINT MICHEL - 105,99€</a> </li>
-                <li>    <a href="#">GARE DE LYON - 115,99€</a> </li>
-                <li>    <a href="#">IENA - 125,90€</a> </li>
+                <li>   <a href="#" >MADELEINE - 140,90€</a> </li>
+                <li>  <a href="#">PLACE VENDÖME - 99,90€</a> </li>
+                <li>    <a href="#">BEAUGRENELLE- 110,90€</a> </li>
+                <li>    <a href="#">OPÉRA GARNIER - 105,99€</a> </li>
+                <li>    <a href="#">BERCY VILLAGE - 115,99€</a> </li>
+                <li>    <a href="#">PORTE DE VERSAILLES - 125,90€</a> </li>
 
               </ul>
             </div>
