--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -146,8 +146,12 @@
                     </ul>
 
 
+
                 </div>
+                <br>
+                <p id="telechargez">Téléchargez gratuitement notre application et garez-vous en toute simplicité.<p>
               </div>
+
               <br>
 
               <div class="y-center-thumbnails">
