--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -135,7 +135,7 @@
             <div class="mobile-app-content">
               <h3 id="porte"> Ouvrez la porte du parking depuis votre iPhone ou Android.</h3>
                 <br>
-                <p id="application"> Fini les bips de parking perdus, fini les cautions encaissées. Utilisez l’application SharePark, et ouvrez la porte du parking d’un simple effleurement de doigt !</p>
+                <p id="application"> Fini les bips de parkings perdus, fini les cautions encaissées. Utilisez l’application SharePark, et ouvrez les portes du parking d’un simple effleurement de doigt !</p>
 
                 <div class="col-md-8 col-sm-20 text-left">
                 <ul style="list-style-type: none">
@@ -245,7 +245,7 @@
                   <div class="home2-car-filter">
                     <a href="#" data-filter="*" class="active">Tous</a>
                     <a href="#" data-filter=".con">Parking extérieur</a>
-                    <a href="#" data-filter=".hat">Parking soutérain</a>
+                    <a href="#" data-filter=".hat">Parking soutérrain</a>
                     <a href="#" data-filter=".mpv">Parking aérien</a>
                     <a href="#" data-filter=".sedan">Aéroports</a>
                     <a href="#" data-filter=".suv">Gares</a>
@@ -362,7 +362,7 @@
             <div class="section-title  text-center">
               <h2>TARIFICATION DES PLACES DE PARKING</h2>
               <span class="title-line"><i class="fa fa-car"></i></span>
-              <p>Des prix en fonction des lieux et dégrésifs sur le temps</p>
+              <p>Des prix en fonction des lieux et dégréssifs sur le temps</p>
             </div>
           </div>
           <!-- Section Title End -->
