--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -49,6 +49,7 @@
             <!--== Logo Start ==-->
             <div class="col-lg-4">
               <a href="index2.html" class="logo">
+                <img src="assets/img/logo.png" alt="JSOFT">
               </a>
             </div>
             <!--== Logo End ==-->
@@ -490,6 +491,7 @@
               <div class="single-footer-widget">
                 <h2>À propos de nous</h2>
                 <div class="widget-body">
+                  <img src="assets/img/logo.png" alt="JSOFT">
                   <p>Présent dans toute la France, SharePark vous propose des parkings disponibles à toute heure de la journée</p>
 
                   <div class="newsletter-area">
