--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -262,6 +262,7 @@
                       <div class="single-popular-car">
                         <div class="p-car-thumbnails">
                           <a class="car-hover" href="assets/img/car/car-1.jpg">
+                            <img src="assets/img/car/car-1.jpg" alt="JSOFT">
                           </a>
                         </div>
 
@@ -288,6 +289,7 @@
                       <div class="single-popular-car">
                         <div class="p-car-thumbnails">
                           <a class="car-hover" href="assets/img/car/car-2.jpg">
+                            <img src="assets/img/car/car-2.jpg" alt="JSOFT">
                           </a>
                         </div>
 
@@ -314,6 +316,7 @@
                       <div class="single-popular-car">
                         <div class="p-car-thumbnails">
                           <a class="car-hover" href="assets/img/car/car-3.jpg">
+                            <img src="assets/img/car/car-3.jpg" alt="JSOFT">
                           </a>
                         </div>
 
@@ -472,6 +475,7 @@
           <!-- About Video Start -->
           <div class="col-lg-6">
             <div class="about-image">
+              <img src="assets/img/home-2-about.png" alt="JSOFT">
             </div>
           </div>
           <!-- About Video End -->
