--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -48,7 +48,7 @@
           <div class="row">
             <!--== Logo Start ==-->
             <div class="col-lg-4">
-              <a href="index2.html" class="logo">
+              <a href="#" class="logo">
                 <img src="assets/img/logo.png" alt="JSOFT">
               </a>
             </div>
@@ -60,9 +60,9 @@
                 <ul>
                   <color>
                     <li class="active"><a href="#">Localiser un parking</a>
-                    <li><a href="about.html">Tous les parkings</a></li>
-                    <li><a href="services.html">Comment ça marche ?</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#">Tous les parkings</a></li>
+                    <li><a href="#">Comment ça marche ?</a></li>
+                    <li><a href="#">Contact</a></li>
                   </color>
                 </ul>
               </nav>
@@ -115,7 +115,7 @@
                       </div>
 
                       <div class="bookcar-btn bookinput-item">
-                        <button type="submit">Trouver un parking</button>
+                        <button type="reset">Trouver un parking</button>
                       </div>
                     </form>
                   </div>
@@ -499,7 +499,7 @@
                   <p>Présent dans toute la France, SharePark vous propose des parkings disponibles à toute heure de la journée</p>
 
                   <div class="newsletter-area">
-                    <form action="index.html">
+                    <form action="#">
                       <input type="email" placeholder="Souscrivez à notre newsletter">
                       <button type="submit" class="newsletter-btn"><i class="fa fa-send"></i></button>
                     </form>
@@ -564,7 +564,7 @@
                     <li><i class="fa fa-mobile"></i> +33 1 77 56 55 98</li>
                     <li><i class="fa fa-envelope"></i> contact@sharepark.com</li>
                   </ul>
-                  <a href="https://goo.gl/maps/b5mt45MCaPB2" class="map-show" target="_blank">Montrer la localisation</a>
+                  <a href="https://www.google.com/maps/place/INSEEC+MSc+%26+MBA/@48.8859071,2.3725451,15z/data=!4m2!3m1!1s0x0:0xef57316e1c0863ef?sa=X&ved=2ahUKEwjgxdq0laPjAhVuAGMBHbJjDNAQ_BIwCnoECA4QCA" class="map-show" target="_blank">Montrer la localisation</a>
                 </div>
               </div>
             </div>
