footer version finale

--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -515,34 +515,33 @@
               <div class="single-footer-widget">
 
 
-                <h2>Ils parlent de nous</h2>
+                <h2>La presse parle de SharePark</h2>
 
                 <div class="widget-body">
                   <ul class="recent-post">
                     <li>
                       <a href="#">
-                        Hello Paris !
+                        Location de parking :<br>
+                        payez-vous le juste prix ?
                         <i class="fa fa-long-arrow-right"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        Le parking innovant
+                        Comment réinventer le <br>
+                        stationnement en ville ?
                         <i class="fa fa-long-arrow-right"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        Le e-parking !
+                        SharePark, la start-up qui <br>révolutionne le stationnement !
                         <i class="fa fa-long-arrow-right"></i>
                       </a>
                     </li>
                     <li>
                       <a href="#">
-
-                        Parking disponibles à tout moment
-
-
+                        Des parkings disponibles <br> à tout moment
                         <i class="fa fa-long-arrow-right"></i>
                       </a>
                     </li>
