--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -137,7 +137,7 @@
                 <br>
                 <p id="application"> Fini les bips de parkings perdus, fini les cautions encaissées. Utilisez l’application SharePark, et ouvrez les portes du parking d’un simple effleurement de doigt !</p>
 
-                <div class="col-md-8 col-sm-20 text-left">
+                <div >
                 <ul style="list-style-type: none">
                     <li id="application" >✅ Application gratuite</li>
                     <li id="application">✅ Ouverture sécurisée</li>
